<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.UserManualFragment"
    android:theme="@style/FragmentTheme">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/back_button"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button"
        android:id="@+id/scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/emergency_alert_app"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/introduction"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/this_is_an_emergency_safety_app_that_allows_users_to_alert_their_specified_contacts_and_certain_helplines_at_the_time_of_danger" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/credits"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getting_started"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/install_the_app_on_play_store_and_set_up_a_profile_to_sign_up_enter_a_username_phone_number_password_gender_and_date_of_birth_it_leads_you_to_the_sign_in_page_for_you_to_login_to_your_registered_account" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_alerts"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/in_order_to_use_this_feature_provide_access_to_your_contacts_list_then_select_the_contacts_you_want_to_notify_in_case_of_emergency_go_to_phone_settings_and_allow_access_to_location_microphone_camera_and_sms_to_fully_use_the_features_of_this_app_and_make_it_work_efficiently_your_data_is_encrypted_and_secured" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_alerts"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/this_feature_allows_you_to_customize_your_emergency_alert_by_clicking_on_custom_alert_message_box_you_can_type_your_message" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_helplines"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/this_feature_allows_you_to_contact_helplines_in_case_of_emergency_after_clicking_on_the_contact_helpline_box_it_will_direct_you_to_a_list_of_helplines_you_can_select_any_and_contact_them" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>