<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio_button_both"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio_button_alert_helplines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_helplines_only"/>

        <RadioButton
            android:id="@+id/radio_button_alert_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_contacts_only"/>

        <RadioButton
            android:id="@+id/radio_button_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_both"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/LL"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/quickAlertCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/quickAlertImage"
                android:padding="16dp"
                android:layout_gravity="start|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alert"/>

            <TextView
                android:id="@+id/quickAlertText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_alert"
                android:padding="8dp"
                android:layout_gravity="center_vertical|center"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/editContactsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/editContactsImage"
                android:padding="16dp"
                android:layout_gravity="start|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contact"/>

            <TextView
                android:id="@+id/editContactsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_contacts"
                android:padding="16dp"
                android:layout_gravity="center_vertical|end"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/contact_helpline_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL"
        android:layout_marginTop="16dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <ImageView
            android:id="@+id/contactimage"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/call"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/contact_helpline"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/custom_alert_layout"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/contact_helpline_card"
        android:layout_above="@id/bottom_navigation"
        android:layout_weight="1"
        android:background="@drawable/outline">

        <EditText
            android:id="@+id/custom_alert_text"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/custom_alert_message"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:padding="16dp" />

        <ImageView
            android:id="@+id/microphone_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/video" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/send" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemTextColor="@color/material_dynamic_neutral0"
        app:menu="@menu/bottomnavmenu"
         />




</RelativeLayout>
