<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AlertFragment"
    android:theme="@style/FragmentTheme">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:elevation="5dp"
        android:src="@drawable/back_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button"
        android:id="@+id/alerttype"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/userid"
        android:textStyle="italic"
        android:textColor="#008EFF"
        android:textAlignment="center"
        android:layout_below="@id/alerttype" />

    <ImageButton
        android:layout_marginTop="20dp"
        android:tooltipText="View Location"
        android:id="@+id/locationbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/outline"
        android:elevation="5dp"
        android:src="@drawable/location"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/userid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loctxt"
        android:layout_below="@id/locationbtn"
        android:layout_centerHorizontal="true"
        android:textSize="11sp"
        android:layout_marginBottom="20dp"
        android:text="@string/view_location"/>

    <ImageButton
        android:id="@+id/videoview"
        android:src="@drawable/video"
        android:background="@drawable/outline"
        android:layout_centerHorizontal="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/loctxt"
        android:visibility="invisible"
        android:layout_marginHorizontal="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videotxt"
        android:layout_below="@id/videoview"
        android:layout_centerHorizontal="true"
        android:textSize="11sp"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
        android:text="@string/video"/>

    <ImageButton
        android:id="@+id/audioview"
        android:src="@drawable/audio"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/outline"
        android:layout_below="@id/videotxt"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/audiotxt"
        android:layout_below="@id/audioview"
        android:layout_centerHorizontal="true"
        android:textSize="11sp"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
        android:text="@string/audio"/>


</RelativeLayout>